# fast-seeker

./: .coverage  pyproject.toml
.github/workflows/: pr_tests.yml  publish.yml  test.yml
src/fast_seeker/: __init__.py
src/fast_seeker/contrib/basic/: __init__.py  filtering.py  pagination.py  sorting.py
src/fast_seeker/contrib/beanie/: filtering.py  pagination.py  sorting.py
src/fast_seeker/contrib/django/: filtering.py  pagination.py  sorting.py
src/fast_seeker/contrib/motor/: filtering.py  pagination.py  sorting.py
src/fast_seeker/core/: base.py  filtering.py  pagination.py  sorting.py
src/tests/: conftest.py
src/tests/fixtures/: sorting.py
src/tests/test_contrib_basic/: test_contrib_basic_filtering.py
src/tests/test_contrib_beanie/: test_contrib_beanie_filtering.py  test_contrib_beanie_pagination.py  test_contrib_beanie_sorting.py
src/tests/test_contrib_django/: test_contrib_django_filtering.py  test_contrib_django_pagination.py  test_contrib_django_sorting.py
src/tests/test_contrib_motor/: fixtures.py  test_contrib_pymongo_filtering.py  test_contrib_pymongo_pagination.py  test_contrib_pymongo_sorting.py
src/tests/test_contrib_odmantic/: test_contrib_odmantic_engines.py  test_contrib_odmantic_filtering.py  test_contrib_odmantic_pagination.py  test_contrib_odmantic_sorting.py  utils.py
src/tests/test_contrib_pymongo/: fixtures.py  test_contrib_pymongo_filtering.py  test_contrib_pymongo_pagination.py  test_contrib_pymongo_sorting.py
src/tests/test_core/: test_core_base.py  test_core_filtering.py  test_core_pagination.py  test_core_sorting.py
(+11 files in other folders)
