[project]
name = "fast-seeker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aryan Curiel", email = "aryan.curiel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.2",
]

[project.optional-dependencies]
beanie = [
    "beanie>=1.27.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.8",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM",  # flake8-simple
]
ignore = [
    "W191", # https://docs.astral.sh/ruff/rules/tab-indentation/
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
